# xcp-protocol

./: CMakeLists.txt
include/: xcp.h
src/: call.c  client.c  handle.c  internal.h  marshal.c  server.c  socket.c  variant.c
src/test_c/: main.c
src/test_s/: main.c
